--- a/css/style.css
+++ b/css/style.css
@@ -1,122 +1,130 @@
-/* Reset Styles */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* First Mobile */
+
+/* Config Global */
+html body {
+    background-color: #2e3338;
+    color: #f3f3f3;
 }
 
-/* Styles index */
-
-body {
-    font-family: "Roboto", serif;
-    /* Font for all html */
-    background-color: black;
-    color: whitesmoke;
+/* Size logo */
+header nav div a .logo {
+    height: 150px;
+    width: auto;
+    padding: 5px;
 }
 
-/* Logo - Container */
-header div {
-    background-color: #327155;
+/* Navbar */
+.navbar {
+    margin-top: -8px;
 }
 
-/* Logo */
-header div img {
-    max-width: 50%;
+.navbar-nav {
+    font-size: 1.6rem;
+    font-weight: bold;
+    gap: 2rem;
 }
 
-header {
-    text-align: center;
+.nav-link {
+    text-transform: uppercase;
+    color: black;
+    padding: 0.5rem;
+    border: 2px solid rgb(43, 42, 42);
+    border-radius: 10px;
+    transition: background-color 0.4s, color 0.4s;
 }
 
-header nav {
-    margin-bottom: 20px;
-    margin-top: 20px;
+.nav-link:hover {
+    background-color: #08311d;
+    color: #B6DE84;
 }
 
-header nav ul li {
-    list-style: none;
-    font-weight: 1000;
-    margin: 1px;
-    color: whitesmoke;
-    border: 1px solid;
-    margin-left: 44%;
-    margin-right: 44%;
-    margin-top: 5px;
+/* Dropdown Menu */
+.dropdown-menu {
+    border: 2px solid black;
+    background-color: #08311d;
 }
 
-header nav ul li a {
-    text-decoration: none;
-    color: whitesmoke;
+.dropdown-item {
+    color:whitesmoke;
+    text-transform: uppercase;
+    color: #B6DE84;
+    font-size: 1.2rem;
+    transition: background-color 0.3s, color 0.3s, border 0.2s;
 }
 
-main h1 {
-    margin: 20px;
-    text-align: center;
-    font-weight: 600;
+.dropdown-item:hover {
+    background-color: #B6DE84;
+    border: 1px solid rgb(73, 71, 71);
+    color: #08311d;
 }
 
-main h2 {
-    text-align: center;
-    font-weight: 500;
+/* Titles */
+
+.title {
+    font-size: 2rem;
+    margin: 0 10px;
 }
 
-div h3 {
-    text-align: center;
-    margin: 20px;
-    text-decoration: underline;
-    font-size: 35px;
+.green-font {
+    color: #B6DE84;
 }
 
-section img {
-    width: 30%;
-    margin: 10px;
-}
+/* Section */
 
-section span {
-    padding: 0;
-    margin: 0;
+.flex-container {
+    margin: auto;
+    width: 90%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    gap: 20px;
 }
 
 .image {
-    text-align: center;
-    margin-left: 25%;
-    margin-right: 25%;
-    border: 2px solid;
-    margin-bottom: 20px;
-    background-color: #327155;
-    max-width: 1000px;
+    border: 2px solid whitesmoke;
 }
 
-footer {
-    background-color: #327155;
-    text-align: center;
+.image img {
+    height: 15rem;
+    width: auto;
 }
 
-.contacto {
-    font-weight: bold;
-    margin-top: 20px;
+.image p {
+    max-width: 500px;
+    margin: 5px;
 }
 
-footer div a img {
-    width: 100px;
-    margin-bottom: 5px;
+/* Footer */
+
+footer div {
+    font-size: 1.5rem;
 }
 
-footer div p {
-    margin-bottom: 20px;
+.contact-logo {
+    border: 2px solid whitesmoke;
+    color: #B6DE84;
+    padding: 1rem;
+    border-radius: 20px;
+    transition: background-color 0.3s;
 }
 
-/* Styles Yerbas / Termos / Mates / Alfajores */
-section {
-    text-align: center;
-
+.contact-logo p {
+    color:#B6DE84
 }
 
-h3 {
-    margin-bottom: 10px;
+.contact-logo:hover {
+    background-color: #08311d;
 }
 
-.title {
-    font-size: 25px;
-    font-weight: bold;
+.image-footer {
+    height: 120px;
+    width: auto;
+}
+
+
+/* Media Query for computer */
+@media (min-width: 1024px) {
+    .contact-logo {
+        margin: 0 40%;
+    }
 }
